# lalonde-nsw-ica2026

./: .gitignore  CLAUDE.md  README.md  conftest.py  pyproject.toml
data/synthetic/: dgp_nsw.py
notebooks/E1_planificacion/: E1_LaLonde_NSW_esqueleto.ipynb
notebooks/E2_ejecucion/: 02_datos_eda_balance.ipynb  03_estimacion_psm_aipw.ipynb  04_estimacion_dml_sync.ipynb
reports/E1_informe/: E1_LaLonde_NSW_Planificacion.docx
reports/E2_informe/: E2_LaLonde_NSW_Reporte_Intermedio.docx  crear_reporte.js  ~$_LaLonde_NSW_Reporte_Intermedio.docx
scripts/: crear_notebooks_e2.py  extraer_resultados.py
src/lalonde_nsw/: __init__.py  dag.py  data.py  estimators.py  sensitivity.py  visualization.py
tests/: test_dag.py  test_estimators.py  test_sensitivity.py
